crates/orator-core/tests/snapshots/lower_schemas__additional_properties.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "ClosedUser",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "id",
                        type_ref: Primitive(
                            I32,
                        ),
                        required: true,
                        description: None,
                    },
                    Field {
                        name: "name",
                        type_ref: Primitive(
                            String,
                        ),
                        required: true,
                        description: None,
                    },
                ],
                deny_unknown_fields: true,
            },
        ),
    },
    TypeDef {
        name: "EmptyClosedObject",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [],
                deny_unknown_fields: true,
            },
        ),
    },
    TypeDef {
        name: "OpenObject",
        description: None,
        kind: Alias(
            Map(
                Primitive(
                    String,
                ),
            ),
        ),
    },
    TypeDef {
        name: "StringMap",
        description: None,
        kind: Alias(
            Map(
                Primitive(
                    String,
                ),
            ),
        ),
    },
]
