crates/orator-core/tests/snapshots/lower_schemas__anyof.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "StringOrInt",
        description: None,
        kind: Enum(
            EnumDef {
                variants: [
                    Variant {
                        type_ref: Primitive(
                            String,
                        ),
                        mapping_value: None,
                    },
                    Variant {
                        type_ref: Primitive(
                            I32,
                        ),
                        mapping_value: None,
                    },
                ],
                discriminator: None,
            },
        ),
    },
]
