crates/orator-core/tests/snapshots/lower_schemas__datetime.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "DateAlias",
        description: None,
        kind: Alias(
            Primitive(
                Date,
            ),
        ),
    },
    TypeDef {
        name: "Event",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "cancelled_at",
                        type_ref: Primitive(
                            DateTime,
                        ),
                        required: false,
                        description: None,
                    },
                    Field {
                        name: "date",
                        type_ref: Primitive(
                            Date,
                        ),
                        required: true,
                        description: None,
                    },
                    Field {
                        name: "name",
                        type_ref: Primitive(
                            String,
                        ),
                        required: true,
                        description: None,
                    },
                    Field {
                        name: "starts_at",
                        type_ref: Primitive(
                            DateTime,
                        ),
                        required: true,
                        description: None,
                    },
                ],
                deny_unknown_fields: false,
            },
        ),
    },
]
