crates/orator-core/tests/snapshots/lower_schemas__dollar_prefix.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "PolymorphicMessage",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "$",
                        type_ref: Primitive(
                            String,
                        ),
                        required: false,
                        description: None,
                    },
                    Field {
                        name: "$type",
                        type_ref: Primitive(
                            String,
                        ),
                        required: true,
                        description: None,
                    },
                    Field {
                        name: "body",
                        type_ref: Primitive(
                            String,
                        ),
                        required: true,
                        description: None,
                    },
                ],
                deny_unknown_fields: false,
            },
        ),
    },
]
