crates/orator-core/tests/snapshots/lower_schemas__nullable_fields.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "Profile",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "bio",
                        type_ref: Option(
                            Primitive(
                                String,
                            ),
                        ),
                        required: false,
                        description: None,
                    },
                    Field {
                        name: "name",
                        type_ref: Primitive(
                            String,
                        ),
                        required: true,
                        description: None,
                    },
                ],
                deny_unknown_fields: false,
            },
        ),
    },
]
