crates/orator-core/tests/snapshots/lower_schemas__oneof_discriminator.snap
---
source: crates/orator-core/tests/lower_schemas.rs
expression: types
---
[
    TypeDef {
        name: "Circle",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "radius",
                        type_ref: Primitive(
                            F32,
                        ),
                        required: true,
                        description: None,
                    },
                ],
            },
        ),
    },
    TypeDef {
        name: "Rectangle",
        description: None,
        kind: Struct(
            StructDef {
                bases: [],
                fields: [
                    Field {
                        name: "height",
                        type_ref: Primitive(
                            F32,
                        ),
                        required: true,
                        description: None,
                    },
                    Field {
                        name: "width",
                        type_ref: Primitive(
                            F32,
                        ),
                        required: true,
                        description: None,
                    },
                ],
            },
        ),
    },
    TypeDef {
        name: "Shape",
        description: None,
        kind: Enum(
            EnumDef {
                variants: [
                    Variant {
                        type_ref: Named(
                            "Circle",
                        ),
                        mapping_value: None,
                    },
                    Variant {
                        type_ref: Named(
                            "Rectangle",
                        ),
                        mapping_value: None,
                    },
                ],
                discriminator: Some(
                    DiscriminatorDef {
                        property: "type",
                        mapping: {},
                    },
                ),
            },
        ),
    },
]
